--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,11 @@
-plugins {
+plugins{
     id 'java'
+    id 'io.qameta.allure' version '2.11.0'
 }
 
 group 'org.example'
 version '1.0-SNAPSHOT'
+
 
 repositories {
     mavenCentral()
@@ -18,6 +20,8 @@ dependencies {
     testImplementation 'io.rest-assured:json-schema-validator:5.3.0'
     implementation 'org.json:json:20230227'
     testImplementation 'com.squareup.okhttp3:okhttp:4.10.0'
+    testImplementation 'io.qameta.allure:allure-junit5:2.21.0'
+
 }
 
 test {
